src/objects/Expense_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Enter the estimated Amount of the expense item</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Rental car</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Approval__c</fullName>
        <label>Travel Approval</label>
        <referenceTo>Travel_Approval__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>